<resources>
    <string name="app_name">To BE or to HAVE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="categories">Catégories</string>
    <string name="accueil">Accueil</string>
    <string name="promos">Promos</string>
    <string name="wishlist">Ma liste d\'envies</string>
    <string name="notif">Mes notifications</string>
    <string name="news">Nouveautés</string>
    <string name="mail">tbth.cs@info.com</string>
    <string name="nous_contacter">Nous contacter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="outOfstock">Cet article est épuisé</string>
    <string name="inStock">En stock</string>
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="desc">desc</string>
    <string name="price">price</string>
    <string name="stock">stock</string>
    <string name="addWishlist">Ajouter à ma liste d\'envies</string>
    <string name="category">category</string>
    <string name="pricepromo">pricePromo</string>
    <string name="promo">PROMO!</string>
    <string name="phone">0637528492</string>
    <string name="title_activity_notification_laucher">NotificationLaucherActivity</string>
    <string name="title_activity_show_product">ShowProductActivity</string>
    <string name="nouveaute">NOUVEAUTE</string>
    <string name="pr_f_rences">Préférences</string>
    <string name="ev_nements">Evènements</string>
    <string name="r_glages">Réglages</string>
    <string name="ajouter_ma_liste_d_envies">Ajouter à ma liste d\'envies</string>
</resources>
