<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="54dp"
        android:text="title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/edtiborder"
        android:padding="10dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_alignTop="@+id/imageButton"
        android:layout_marginLeft="220dp"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="desc"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="price"
        android:textSize="17dp"
        android:textColor="#000000"
        android:layout_below="@+id/author"
        android:layout_alignStart="@+id/author"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="stock"
        android:textSize="17dp"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignStart="@+id/price2" />

    <CheckBox
        android:id="@+id/wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/ajouter_ma_liste_d_envies"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:text="category" />

    <TextView
        android:id="@+id/price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/price"
        android:textSize="17dp"
        android:layout_below="@+id/price"
        android:textColor="#000000"
        android:text="pricePromo" />

    <TextView
        android:id="@+id/promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:textColor="@color/colorPromo"
        android:text="PROMO!"
        android:layout_above="@+id/price2"
        android:layout_alignStart="@+id/price" />

    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:textColor="#D40D12"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/nouveaute"/>

</RelativeLayout>